# LearnVulkan

./: CMakeLists.txt  compile.bat
ressources/shaders/: simple_shader.frag  simple_shader.vert
scripts/: compile_shader.bat
shaders/: simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  application.cpp  application.h
src/render/: CMakeLists.txt  window.cpp  window.h
src/utils/: CMakeLists.txt  build_macro.h.in  files.cpp  files.h
